// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile renders Profile 1`] = `
<div
  className="MuiGrid-container-1"
  style={
    Object {
      "marginTop": "2%",
      "paddingBottom": "5%",
    }
  }
>
  <div
    className="MuiGrid-container-1"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <div>
        <div
          className="MuiPaper-root-99 MuiPaper-elevation1-102 MuiPaper-rounded-100 MuiCard-root-98"
          style={
            Object {
              "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0.2)",
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "flex": 4,
                "flexDirection": "column",
              }
            }
          >
            <div
              className="MuiCardContent-root-126"
              style={
                Object {
                  "flex": "1 0 auto",
                }
              }
            >
              <h1
                className="MuiTypography-root-127 MuiTypography-display1-131"
              >
                user
              </h1>
              <p
                className="MuiTypography-root-127 MuiTypography-body1-136"
                style={
                  Object {
                    "marginTop": 4,
                  }
                }
              >
                desc
              </p>
              <p
                className="MuiTypography-root-127 MuiTypography-body1-136"
                style={
                  Object {
                    "color": "gray",
                    "fontSize": 12,
                    "marginTop": 12,
                  }
                }
              >
                Hexanews member since Invalid date
              </p>
            </div>
          </div>
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <img
              alt="avatar"
              src={undefined}
              style={
                Object {
                  "borderRadius": "50%",
                  "height": 100,
                  "width": 100,
                }
              }
            />
          </div>
        </div>
      </div>
      <button
        className="MuiButtonBase-root-178 MuiButton-root-152 MuiButton-text-154 MuiButton-outlined-160 MuiButton-sizeSmall-175"
        disabled={false}
        id="accountButton"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginLeft": 20,
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-153"
        >
          My Account
        </span>
        <span
          className="MuiTouchRipple-root-181"
        />
      </button>
      <hr
        className="MuiDivider-root-188"
        style={
          Object {
            "marginTop": 20,
          }
        }
      />
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
      style={Object {}}
    >
      <div
        className="MuiPaper-root-99 MuiPaper-elevation1-102 MuiPaper-rounded-100 MuiCard-root-98"
        id="card-1"
        onClick={[Function]}
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "cursor": "pointer",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-192"
        >
          <div
            className="MuiCardHeader-avatar-193"
          >
            <div
              className="MuiAvatar-root-198 MuiAvatar-colorDefault-199"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            >
              U
            </div>
          </div>
          <div
            className="MuiCardHeader-content-195"
          >
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiCardHeader-title-196"
            >
              user
            </span>
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiTypography-colorTextSecondary-150 MuiCardHeader-subheader-197"
            >
              13 September 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardContent-root-126"
        >
          <h2
            className="MuiTypography-root-127 MuiTypography-headline-132 MuiTypography-gutterBottom-144"
          >
            abc
          </h2>
          <p
            className="MuiTypography-root-127 MuiTypography-body1-136"
          >
            test
          </p>
        </div>
      </div>
      <div
        className="MuiPaper-root-99 MuiPaper-elevation1-102 MuiPaper-rounded-100 MuiCard-root-98"
        id="card-2"
        onClick={[Function]}
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "cursor": "pointer",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-192"
        >
          <div
            className="MuiCardHeader-avatar-193"
          >
            <div
              className="MuiAvatar-root-198 MuiAvatar-colorDefault-199"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            >
              U
            </div>
          </div>
          <div
            className="MuiCardHeader-content-195"
          >
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiCardHeader-title-196"
            >
              user
            </span>
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiTypography-colorTextSecondary-150 MuiCardHeader-subheader-197"
            >
              13 September 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardContent-root-126"
        >
          <h2
            className="MuiTypography-root-127 MuiTypography-headline-132 MuiTypography-gutterBottom-144"
          >
            def
          </h2>
          <p
            className="MuiTypography-root-127 MuiTypography-body1-136"
          >
            tester
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
</div>
`;

exports[`Profile renders Profile without description 1`] = `
<div
  className="MuiGrid-container-1"
  style={
    Object {
      "marginTop": "2%",
      "paddingBottom": "5%",
    }
  }
>
  <div
    className="MuiGrid-container-1"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <div>
        <div
          className="MuiPaper-root-99 MuiPaper-elevation1-102 MuiPaper-rounded-100 MuiCard-root-98"
          style={
            Object {
              "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0.2)",
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "flex": 4,
                "flexDirection": "column",
              }
            }
          >
            <div
              className="MuiCardContent-root-126"
              style={
                Object {
                  "flex": "1 0 auto",
                }
              }
            >
              <h1
                className="MuiTypography-root-127 MuiTypography-display1-131"
              >
                user
              </h1>
              <p
                className="MuiTypography-root-127 MuiTypography-body1-136"
                style={
                  Object {
                    "marginTop": 4,
                  }
                }
              >
                
              </p>
              <p
                className="MuiTypography-root-127 MuiTypography-body1-136"
                style={
                  Object {
                    "color": "gray",
                    "fontSize": 12,
                    "marginTop": 12,
                  }
                }
              >
                Hexanews member since Invalid date
              </p>
            </div>
          </div>
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <img
              alt="avatar"
              src={undefined}
              style={
                Object {
                  "borderRadius": "50%",
                  "height": 100,
                  "width": 100,
                }
              }
            />
          </div>
        </div>
      </div>
      <button
        className="MuiButtonBase-root-178 MuiButton-root-152 MuiButton-text-154 MuiButton-outlined-160 MuiButton-sizeSmall-175"
        disabled={false}
        id="accountButton"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginLeft": 20,
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-153"
        >
          My Account
        </span>
        <span
          className="MuiTouchRipple-root-181"
        />
      </button>
      <hr
        className="MuiDivider-root-188"
        style={
          Object {
            "marginTop": 20,
          }
        }
      />
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
      style={Object {}}
    >
      <div
        className="MuiPaper-root-99 MuiPaper-elevation1-102 MuiPaper-rounded-100 MuiCard-root-98"
        id="card-1"
        onClick={[Function]}
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "cursor": "pointer",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-192"
        >
          <div
            className="MuiCardHeader-avatar-193"
          >
            <div
              className="MuiAvatar-root-198 MuiAvatar-colorDefault-199"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            >
              U
            </div>
          </div>
          <div
            className="MuiCardHeader-content-195"
          >
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiCardHeader-title-196"
            >
              user
            </span>
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiTypography-colorTextSecondary-150 MuiCardHeader-subheader-197"
            >
              13 September 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardContent-root-126"
        >
          <h2
            className="MuiTypography-root-127 MuiTypography-headline-132 MuiTypography-gutterBottom-144"
          >
            abc
          </h2>
          <p
            className="MuiTypography-root-127 MuiTypography-body1-136"
          >
            test
          </p>
        </div>
      </div>
      <div
        className="MuiPaper-root-99 MuiPaper-elevation1-102 MuiPaper-rounded-100 MuiCard-root-98"
        id="card-2"
        onClick={[Function]}
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "cursor": "pointer",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-192"
        >
          <div
            className="MuiCardHeader-avatar-193"
          >
            <div
              className="MuiAvatar-root-198 MuiAvatar-colorDefault-199"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            >
              U
            </div>
          </div>
          <div
            className="MuiCardHeader-content-195"
          >
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiCardHeader-title-196"
            >
              user
            </span>
            <span
              className="MuiTypography-root-127 MuiTypography-body2-135 MuiTypography-colorTextSecondary-150 MuiCardHeader-subheader-197"
            >
              13 September 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardContent-root-126"
        >
          <h2
            className="MuiTypography-root-127 MuiTypography-headline-132 MuiTypography-gutterBottom-144"
          >
            def
          </h2>
          <p
            className="MuiTypography-root-127 MuiTypography-body1-136"
          >
            tester
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
</div>
`;
